--- a/stylesheets/carousel.css
+++ b/stylesheets/carousel.css
@@ -75,7 +75,7 @@ body {
 /* Center align the text within the three columns below the carousel */
 .welcome .col-lg-4 {
   margin-bottom: 20px;
-  text-align: center;
+  text-align: left;
 }
 .welcome h2 {
   font-weight: normal;
@@ -97,7 +97,7 @@ body {
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
   margin-bottom: 20px;
-  text-align: center;
+  text-align: left;
 }
 .marketing h2 {
   font-weight: normal;
